# factrs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
assets/: katex-header.html  references.bib
examples/: g2o-rerun.rs  g2o.rs  gps.rs  m3500.rs  readme.rs  serde.rs
factrs-bench/: CMakeLists.txt  Cargo.toml  build.rs
factrs-bench/benches/: g2o-2d.rs  g2o-3d.rs  g2o.rs
factrs-bench/cpp/: CMakeLists.txt  bench_gtsam.cpp
factrs-bench/examples/: test.rs
factrs-bench/include/: gtsam.h
factrs-bench/src/: gtsam.cpp  lib.rs  test.cpp  tiny_solver.rs
factrs-proc/: Cargo.toml
factrs-proc/src/: fac.rs  lib.rs  noise.rs  residual.rs  robust.rs  variable.rs
src/: bin.rs  bundle.rs  lib.rs  linalg.rs  rerun.rs  residual.rs  utils.rs  variables.rs
src/containers/: factor.rs  graph.rs  graph_linear.rs  mod.rs  order.rs  symbol.rs  values.rs
src/factors/: factor.rs  factor_linear.rs  factor_nonlinear.rs  mod.rs  noise.rs  residual.rs  robust.rs
src/linalg/: deriv_dual.rs  deriv_num.rs  diff_forward.rs  diff_num.rs  dual.rs  forward_prop.rs  mod.rs  nalgebra_wrap.rs  numerical_diff.rs
src/linear/: factor.rs  graph.rs  mod.rs  solvers.rs  values.rs
src/macros/: liegroup.rs  mod.rs  noise.rs  residual.rs  robust.rs  variable.rs
src/noise/: gaussian.rs  macros.rs  mod.rs  unit.rs
src/optimizers/: gauss_newton.rs  levenberg_marquardt.rs  macros.rs  mod.rs  traits.rs
src/residuals/: between.rs  combined_imu.rs  imu_preint.rs  linear.rs  macros.rs  mod.rs  prior.rs  traits.rs
src/residuals/imu_preint/: README.md  delta.rs  mod.rs  newtypes.rs  residual.rs
src/robust/: macros.rs  mod.rs  robust.rs
src/traits/: mod.rs  residuals.rs  variable.rs
src/variables/: README.md  base.rs  imu_bias.rs  key.rs  macros.rs  mod.rs  se2.rs  se3.rs  so2.rs  so3.rs  traits.rs  values.rs  variable_enum.rs  vector.rs
tests/: custom_key.rs  custom_noise.rs  custom_residual.rs  custom_robust.rs  custom_variable.rs  dispatch.rs  serde.rs
