[package]
name = "factrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Factor graph optimization for robotics"
readme = "README.md"
authors = ["Easton Potokar", "Taylor Pool"]
repository = "https://github.com/rpl-cmu/factrs"
keywords = ["nonlinear", "optimization", "robotics", "estimation", "SLAM"]
categories = ["science::robotics", "mathematics"]
rust-version = "1.81"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "assets/katex-header.html"]

[dependencies]
# base
ahash = "0.8.11"
paste = "1.0.15"
downcast-rs = "1.2.1"
log = "0.4.22"
factrs-proc = {version = "0.1.0", path = "./factrs-proc"}

# numerical 
faer = { version = "0.19.4", default-features = false, features = [
    "perf-warn",
    "std",
    "matrixcompare",
] }
faer-ext = { version = "0.3.0", features = ["nalgebra"] }
nalgebra = { version = "0.33.2", features = ["compare"] }
num-dual = "0.10.0"
matrixcompare = { version = "0.3" }

# serialization
serde = { version = "1.0.214", optional = true }
typetag = { version = "0.2.18", optional = true, path = "factrs-typetag" }
serde_json = { version = "1.0.132", optional = true }

# rerun support
rerun = { version = "0.20", optional = true, default-features = false, features = [
    "sdk",
] }

[features]
# Run everything with f32 instead of the default f64
f32 = []

# Use left instead of right for lie group updates
left = []

# use SO(n) x R instead of SE(n) for exponential map
fake_exp = []

# Add multithreaded support (may run slower on smaller problems)
rayon = ["faer/rayon"]

# Add support for serialization
serde = [
    "dep:serde",
    "dep:typetag",
    "factrs-proc/serde",
    "nalgebra/serde-serialize",
    "faer/serde",
    "ahash/serde",
]
# just used for examples
serde_json = ["dep:serde_json"]

# Support for conversion to rerun variable types
rerun = ["dep:rerun"]

[dev-dependencies]
matrixcompare = "0.3.0"
pretty_env_logger = "0.5"
nalgebra = { version = "0.33.2", features = ["compare"] }

[[example]]
name = "g2o"

[[example]]
name = "g2o-rerun"
required-features = ["rerun"]

[[example]]
name = "serde"
required-features = ["serde", "serde_json"]
