[package]
name = "factrs-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
# tiny-solver = "0.12.0"
# nalgebra = { version = "0.33", features = ["compare"] }
# factrs = { version = "0.1.0", path = ".." }
cxx = { version = "1.0", features = ["c++17"] }

[dev-dependencies]
diol = { version = "0.8.3", default-features = false }

[build-dependencies]
cmake = "0.1.52"
cxx-build = "1.0"

[features]
cpp = []

[[bench]]
name = "g2o"
harness = false
